css/styles.css
/* general styilng */
* { 
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

main {
    background: rgba(0, 0, 0, .9);
    padding: var(--size-1rem-16px) var(--size-6rem-96px);
    width: calc(100% - 20%);
    margin: 0 auto;
    border-radius: 10px;
}

/* end */



/* variables */
:root {
    /* fonts and color */
    --white: #F4FFE3;
    --comfortaa: 'Comfortaa', sans-serif;
    --libre-font: 'Libre Baskerville', serif;
    --quicksand: 'Quicksand', sans-serif;
    --dm-sans: 'DM Sans', sans-serif;

    /* sizes */
    --size-0p5rem-8px: 0.5rem;
    --size-1rem-16px: 1rem;
    --size-1p25rem-20px: 1.25rem;
    --size-1p5rem-24px: 1.5rem;
    --size-2rem-32px: 2rem;
    --size-2p5rem-40px: 2.5rem;
    --size-3rem-48px: 3rem;
    --size-3p75rem-60px: 3.75rem;
    --size-4rem-64px: 4rem;
    --size-5rem-80px: 5rem;
    --size-6rem-96px: 6rem;
    --size-6p25rem100px: 6.25rem;
}

/* end */



/* text */
.page-h1{
    font-size: 5rem;
    font-family: var(--quicksand);
    font-weight: 600;
    margin: var(--size-2p5rem-40px) 0;
}

.page-h1, .page-h2-content {
    text-align: center;
    color: #F4FFE3;
}

.page-h2-content { 
    font-size: 3rem;
    font-family: var(--dm-sans);
    font-weight: 600;
    margin-bottom: var(--size-2p5rem-40px);
}

.page-p-content {
    color: #F4FFE3;
    font-size: var(--size-1p25rem-20px);
    margin: var(--size-1p5rem-24px) 0;
    font-family: var(--dm-sans);
    font-weight: 400;
}

.center-txt {
    text-align: center;
    list-style-type: none;
}

/* end */



/* seperation line */
.seperation-line {
    border-bottom: 2px solid gray;
    margin: 3.85rem 0 var(--size-3rem-48px) 0;
    opacity: .7;
}

/* end */



/* navigation desktop */
.desktop-navigation, .mobile-navigation{ /*targets both navbars with background color*/
    border-bottom: 2px solid green;
    background-color: #E0C45E;
}

.desktop-navigation .links {
    font-family: var(--dm-sans);
    font-weight: 500;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: var(--size-6rem-96px);

    list-style-type: none;
}

.active-desktop {
    border-bottom: .188rem solid rgb(57, 13, 57);
    padding: var(--size-0p5rem-8px);
    border-radius: .125rem;
    font-weight: 600;
}

.desktop-navigation a {
    text-decoration: none;
}

.desktop-navigation a, a:visited  {
    color: black;
}

.desktop-navigation ul li{
    transition: transform .4s;
}

.desktop-navigation ul li:hover{
    transform: scale(1.2);
    font-weight: 800;
}

.desktop-navigation ul li:first-child{
    transform: scale(1);
    font-weight: 600;
}

.navbar-logo {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.navbar-logo img {
    max-width: var(--size-3p75rem-60px);
}

/* end */


/* mobile navbar */

.mobile-navigation {
    justify-content: space-between;
    align-items: center;
    padding: var(--size-1rem-16px);    
    font-family: var(--dm-sans);
    display: none;
}

.mobile-navigation ul {
    display: flex;
    list-style-type: none;
    align-items: end;
    flex-direction: column;
    font-family: var(--dm-sans);
    row-gap: .7rem;
    margin-top: .6rem;
}

.mobile-navigation li {
    text-align: end;
}

.mobile-navigation a {
    text-decoration: none;
    color: black;
    text-align: right;
}

.mobile-navigation summary i{
    margin-right: .25rem;
}

.mobile-navigation details summary {
    display: flex;
    justify-content: flex-end;
    color: black;
    list-style: none;
    font-family: var(--dm-sans);
    align-items: center;
    font-size: var(--size-1p5rem-24px);
}

.mobile-navigation details summary::-webkit-details-marker{
    display: none;
} /*removes "details arrow" on mobile devices, https: //stackoverflow.com/questions/45346806/details-and-summary-delete-or-hide-arrow*/

.active-mobile {
    border-bottom: .188rem solid #222;
    border-radius: .125rem;
    font-weight: 600;
}

/* hero  */
.hero {
    width: 100%;
}

.hero img{
    width: 100%;

    
}

/* end */






/* content image rules */

.content-image {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: var(--size-3rem-48px) 0;
}

.content-image img {
    border-radius: var(--size-1rem-16px);
    width: 100%;
    max-width: 35rem;
}



/* end */



/* Footer */

footer {
    display: flex;
    color: var(--white);
    text-align: center;
    background-color: black;
    justify-content: space-evenly;
    font-family: var(--dm-sans);
    padding: var(--size-2rem-32px) 0;
}

footer h2 {
    font-size: var(--size-3rem-48px);
    margin-bottom: var(--size-2rem-32px);
}

.footer-hours ul, .footer-visit {
    display: flex;
    flex-direction: column;
    gap: var(--size-1p5rem-24px) 0;
}


.footer-hours ul {
    padding-top: var(--size-1p5rem-24px);
    list-style-type: none;
    font-size: var(--size-1p25rem-20px);
    
}

footer a {
    color: var(--white);
    text-decoration: none;
    font-family: var(--dm-sans);
    font-size: var(--size-1p25rem-20px);
    
}

footer a:visited {
    color: var(--white);
}

footer a span{
    text-decoration: underline;
}

/* end */


/* media queries */
@media screen and (max-width: 1850px) {
    main {
        padding: var(--size-1rem-16px) var(--size-4rem-64px);
    }
    .page-h1 {
        font-size: 4rem;
    }
}

@media screen and (max-width: 1650px) {
    .page-h1{
        font-size: 3.5rem;
    }

    .page-h2-content{
        font-size: var(--size-2p5rem-40px);
    }

    footer h2 {
        font-size: var(--size-2p5rem-40px);
    }
}

/* tablet */
@media screen and (max-width: 950px) {
    main {
         width: calc(100% - 15%); 
    }

    footer {
        flex-direction: column;
        gap: var(--size-5rem-80px) 0;
        padding: 7rem 0;
    }
    
    .desktop-navigation {
        display: none;
    }

    .mobile-navigation{
        display: flex;
    }

    footer h2 {
        margin-bottom: var(--size-1rem-16px);
    }

    .content-image img {
        max-width: 30rem;
    }
}



/* end */

/* phone */
@media screen and (max-width: 750px) {

    .page-h1{
        font-size: var(--size-2p5rem-40px);
    }

    .page-h2-content {
        font-size: var(--size-1p5rem-24px);
    }

    .page-p-content {
        font-size: var(--size-1rem-16px);
    }

    footer h2{
        font-size: var(--size-1p5rem-24px);
    }

    .footer-visit a, .footer-hours ul {
        font-size: var(--size-1rem-16px);
    } 
}

/* end */

